fix list overflow css

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -104,7 +104,7 @@
   color: lightgreen;
 }
 
-.list-group:not(".online-users") {
+.attempt-list {
   max-height: 13em;
   overflow-y: auto;
 }
@@ -118,6 +118,7 @@
 }
 .guess-list {
   max-height: 25em;
+  overflow-y: auto;
 }
 
 .menu-button {
